DEV-module/interrput/error
/home/wgs/GIT/wgs/interrupt/myirq.c: In function ‘myinterrupt’:
/home/wgs/GIT/wgs/interrupt/myirq.c:18:24: warning: unused variable ‘dev’ [-Wunused-variable]
     struct net_device *dev = (struct net_device *) dev_id;
                        ^
/home/wgs/GIT/wgs/interrupt/myirq.c: In function ‘myirqtest_init’:
/home/wgs/GIT/wgs/interrupt/myirq.c:40:40: error: ‘SA_SHIRQ’ undeclared (first use in this function)
     if (request_irq(irq, &myinterrupt, SA_SHIRQ, interface, &irq)) { //early than 2.6.23  
                                        ^
/home/wgs/GIT/wgs/interrupt/myirq.c:40:40: note: each undeclared identifier is reported only once for each function it appears in
make[4]: *** [/home/wgs/GIT/wgs/interrupt/myirq.o] Error 1
make[3]: *** [_module_/home/wgs/GIT/wgs/interrupt] Error 2
make[2]: *** [sub-make] Error 2
make[1]: *** [all] Error 2
make: *** [all] Error 2
